# monorepo

./: LICENSE  README.md
ubuntu-server/: NOTES.md
ubuntu-server/cli_libvirt_backup_manager/: Cargo.toml  Dockerfile  build.rs
ubuntu-server/cli_libvirt_backup_manager/src/: example.xml  main.rs
ubuntu-server/scripts/: homeassistant.virtinstall.sh  ubuntuserver.virtinstall.sh
