[package]
name = "cli_libvirt_backup_manager"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
chrono = { version = "0.4.42" }
roxmltree = { version = "0.20.0"}
libc = "0.2.175"

[build-dependencies]
bindgen = { version = "0.72.1" }
